# PrivPot

./: Dockerfile  Makefile  README.md  SIEM_README.md  docker-compose.yml  pyproject.toml
cloned_system/etc/: hostname
honeypot_mrrobot/etc/: shadow
honeypot_mrrobot/home/mrrobot/Desktop/: secret
logs/: ssh_honeypot.jsonl
pot/honeypot/: README.md
pot/honeypot/cloned_system/etc/: hosts  passwd
pot/honeypot/cloned_system/home/anonymous/Desktop/: secret
pot/honeypot/honeypot_elliot/etc/: shadow
pot/honeypot/honeypot_elliot/home/elliot/Desktop/: secret
pot/honeypot/honeypot_mrrobot/var/home/user/Desktop/: secret
pot/honeypot/scripts/systemd/: ssh-honeypot.service
pot/honeypot/siem/: requirements.txt
pot/honeypot/siem/templates/: index.html
pot/honeypot/src/: config.py  fakedshell.py  log_analyzer.py  system_cloner.py
pot/honeypot/src/ssh_honeypot.egg-info/: PKG-INFO  SOURCES.txt
pot/honeypot/tests/: test_config.py  test_logging.py
scripts/firewall/: iptables-redirect.sh  nftables-redirect.sh
scripts/rsyslog/: 30-ssh-honeypot-qradar.conf
siem/: Dockerfile  app.py
src/: app.py  logutil.py  server.py  utils.py
src/ssh_honeypot.egg-info/: requires.txt  top_level.txt
tests/: test_auth.py  test_cmds.py
