[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-honeypot"
version = "0.1.0"
description = "Isolated SSH honeypot with asyncssh"
requires-python = ">=3.11"
dependencies = [
  "asyncssh>=2.14.2",
  "uvloop>=0.19.0; platform_system!='Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "coverage>=7.5.0",
  "ruff>=0.5.0",
  "black>=24.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
asyncio_mode = "auto"


